po: update po/es_ES/pcp.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/es_ES/pcp.po
+++ b/po/es_ES/pcp.po
@@ -6,15 +6,16 @@
 # Adrian Torralba Roman, 2016
 # ixiam <info@ixiam.com>, 2013
 # Carlos Capote <carloscapote@masticable.org>, 2014
+# ixiam <info@ixiam.com>, 2016
 # ixiam <info@ixiam.com>, 2013
 # Maria Dolores Vallenilla <mvallenilla@ndi.org>, 2015
-# Marti <m.prat@ixiam.com>, 2014
+# Marti Prat <m.prat@ixiam.com>, 2014
 msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-05-09 13:33-0400\n"
-"PO-Revision-Date: 2016-05-09 17:06+0000\n"
-"Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
+"PO-Revision-Date: 2016-06-16 12:06+0000\n"
+"Last-Translator: ixiam <info@ixiam.com>\n"
 "Language-Team: Spanish (http://www.transifex.com/civicrm/civicrm/language/es/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -221,7 +222,7 @@ msgstr "Editar su página de campaña personal"
 
 #: CRM/PCP/Form/Campaign.php
 msgid "Welcome"
-msgstr ""
+msgstr "Bienvenida"
 
 #: CRM/PCP/Form/Campaign.php
 msgid "Your Goal"
@@ -925,40 +926,40 @@ msgstr "Haga clic o pegue este enlace en su buscador "
 
 #: CRM/PCP/DAO/PCP.php
 msgid "PCP Block"
-msgstr ""
+msgstr "Bloque de la PCP"
 
 #: CRM/PCP/DAO/PCP.php
 msgid "Use Thermometer?"
-msgstr ""
+msgstr "¿Usar termómetro?"
 
 #: CRM/PCP/DAO/PCP.php
 msgid "Show Honor Roll?"
-msgstr ""
+msgstr "¿Mostrar el cuadro de honor?"
 
 #: CRM/PCP/DAO/PCP.php
 msgid "Notify Owner?"
-msgstr ""
+msgstr "¿Notificar al propietario?"
 
 #: CRM/PCP/DAO/PCPBlock.php
 msgid "PCP Block ID"
-msgstr ""
+msgstr "Identificador del bloque de la PCP"
 
 #: CRM/PCP/DAO/PCPBlock.php
 msgid "Target Entity"
-msgstr ""
+msgstr "Entidad objetivo"
 
 #: CRM/PCP/DAO/PCPBlock.php
 msgid "Target Entity ID"
-msgstr ""
+msgstr "Identificador de la entidad objetivo"
 
 #: CRM/PCP/DAO/PCPBlock.php
 msgid "Approval Required?"
-msgstr ""
+msgstr "¿Requiere aprovación?"
 
 #: CRM/PCP/DAO/PCPBlock.php
 msgid "Tell a Friend Enabled?"
-msgstr ""
+msgstr "¿\"Recomendar a un amigo\" habilitado?"
 
 #: CRM/PCP/DAO/PCPBlock.php
 msgid "Tell A Friend Limit"
-msgstr ""
+msgstr "Límite de \"Recomendación a un amigo\""
