--- a/po/es_ES/install.po
+++ b/po/es_ES/install.po
@@ -5,17 +5,17 @@
 # Translators:
 # Ares <duelista16@gmail.com>, 2015
 # francescbassas <francesc@babu.cat>, 2015
-# ixiam <info@ixiam.com>, 2014
+# ixiam <info@ixiam.com>, 2014,2016
 # Irene Estefania <iestefania@ndi.org>, 2015
-# Marti <m.prat@ixiam.com>, 2014
+# Marti Prat <m.prat@ixiam.com>, 2014
 # Samuel Orrit <samuel.orrit@aiesec.net>, 2015
 # Veruska Perinotto <reaching.out@gmail.com>, 2015
 msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-05-09 13:33-0400\n"
-"PO-Revision-Date: 2016-05-09 16:48+0000\n"
-"Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
+"PO-Revision-Date: 2016-06-16 11:41+0000\n"
+"Last-Translator: ixiam <info@ixiam.com>\n"
 "Language-Team: Spanish (http://www.transifex.com/civicrm/civicrm/language/es/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -132,13 +132,13 @@ msgstr "Ya no es compatible un valor auto_increment_increment mayor que 1. Por f
 
 #: install/index.php
 msgid "Is the provided database name valid?"
-msgstr ""
+msgstr "¿Es válido el nombre de la base de datos proporcionado?"
 
 #: install/index.php
 msgid ""
 "The database name provided is not valid. Please use only 0-9, a-z, A-Z and _"
 " as characters in the name."
-msgstr ""
+msgstr "El nombre de la base de datos no es válido. Utiliza sólo 0-9, a-z, A-Z y _ como caracteres del nombre."
 
 #: install/index.php
 msgid "Does MySQL thread_stack meet minimum (%1k)"
