--- a/po/es_ES/campaign.po
+++ b/po/es_ES/campaign.po
@@ -10,7 +10,7 @@
 # fmcooke <fmcooke@yahoo.com>, 2012
 # francescbassas <francesc@babu.cat>, 2014
 # Harv Cruzz <hc@sediceweb.co>, 2015
-# ixiam <info@ixiam.com>, 2013
+# ixiam <info@ixiam.com>, 2013,2016
 # Maria Dolores Vallenilla <mvallenilla@ndi.org>, 2015
 # Marti Prat <m.prat@ixiam.com>, 2014
 # Marti Prat <m.prat@ixiam.com>, 2016
@@ -24,8 +24,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-05-09 13:33-0400\n"
-"PO-Revision-Date: 2016-05-20 11:36+0000\n"
-"Last-Translator: Marti Prat <m.prat@ixiam.com>\n"
+"PO-Revision-Date: 2016-06-17 16:33+0000\n"
+"Last-Translator: ixiam <info@ixiam.com>\n"
 "Language-Team: Spanish (http://www.transifex.com/civicrm/civicrm/language/es/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -604,11 +604,11 @@ msgstr ""
 
 #: CRM/Campaign/Info.php
 msgid "GOTV campaign contacts"
-msgstr ""
+msgstr "Contactos de la campaña GOTV"
 
 #: CRM/Campaign/Info.php
 msgid "Record that contacts voted"
-msgstr ""
+msgstr "Registro de que los contactos votaron"
 
 #: CRM/Campaign/Info.php
 msgid "sign CiviCRM Petition"
@@ -1128,12 +1128,12 @@ msgstr "No se ha ingresado ningún tipo de encuesta. Puede <a href=\"%1\">añadi
 
 #: CRM/Campaign/DAO/CampaignGroup.php
 msgid "Campaign Group ID"
-msgstr ""
+msgstr "Identificador del grupo de campaña"
 
 #: CRM/Campaign/DAO/CampaignGroup.php
 msgid "Campaign Group Type"
-msgstr ""
+msgstr "Tipo de grupo de campaña"
 
 #: templates/CRM/Campaign/Page/SurveyType.tpl
 msgid "There are no survey types entered. You can <a href='%1'>add one</a>."
-msgstr ""
+msgstr "No hay ningún tipo de encuesta introducida. Se puede <a href='%1'>añadir una</a>."
