po: update po/it_IT/common-base.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/it_IT/common-base.po
+++ b/po/it_IT/common-base.po
@@ -17,13 +17,14 @@
 # IAntichi <posta@circolodeiantichi.it>, 2014
 # LinoLinux <reni.marco@gmail.com>, 2014
 # Riccardo <ricma40@gmail.com>, 2013,2016
+# Samuele Masetto <samuele.masetto@perora.it>, 2016
 # supershaula <supershaula@gmail.com>, 2013
 msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-05-09 13:33-0400\n"
-"PO-Revision-Date: 2016-06-03 00:13+0000\n"
-"Last-Translator: Francesco Garganese <francesco.garganese@aeromnia.aero>\n"
+"PO-Revision-Date: 2016-06-18 14:55+0000\n"
+"Last-Translator: Samuele Masetto <samuele.masetto@perora.it>\n"
 "Language-Team: Italian (http://www.transifex.com/civicrm/civicrm/language/it/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -4553,7 +4554,7 @@ msgstr "Il contatto può essere l'organizzazione iscritta con un tipo di iscrizi
 
 #: CRM/Contact/Form/Task/Delete.php
 msgid "Unable to Delete"
-msgstr ""
+msgstr "Impossibile effettuare la cancellazione"
 
 #: CRM/Contact/Form/Task/Delete.php
 msgid ""
@@ -5092,7 +5093,7 @@ msgstr "Il gruppo \"%1\" già esiste."
 msgid ""
 "Records imported successfully but unable to parse some of the street "
 "addresses"
-msgstr "Record importati con successo, ma in grado di analizzare alcuni degli indirizzi di strada"
+msgstr "Record importati con successo, ma non si è stato in grado di analizzare alcuni degli indirizzi"
 
 #: CRM/Contact/Import/Form/Summary.php
 msgid "These records have been replaced with the imported data."
@@ -5221,7 +5222,7 @@ msgstr "Destinatario - Cliente"
 
 #: CRM/Contact/Import/Parser/Contact.php
 msgid "Record imported successfully but unable to parse the street address: "
-msgstr "Il Record importato con successo, ma in grado di analizzare l'indirizzo:"
+msgstr "Il Record importato con successo, ma non si è stati in grado di analizzare l'indirizzo:"
 
 #: CRM/Contact/Import/Parser.php templates/CRM/Activity/Form/Activity.tpl
 msgid "minutes"
@@ -5590,7 +5591,7 @@ msgstr "Rilascia le email"
 
 #: CRM/Contact/Task.php
 msgid "Alter Contact Communication Preferences"
-msgstr ""
+msgstr "Modifica le preferenze per la comunicazione del contatto"
 
 #: CRM/Contact/Task.php
 msgid "Restore Contacts"
@@ -12645,7 +12646,7 @@ msgstr ""
 
 #: CRM/Utils/File.php
 msgid "Unable to remove file %1"
-msgstr ""
+msgstr "Impossibile cancellare il file %1"
 
 #: CRM/Utils/File.php
 msgid "Removed directory %1"
@@ -12653,7 +12654,7 @@ msgstr ""
 
 #: CRM/Utils/File.php
 msgid "Unable to remove directory %1"
-msgstr ""
+msgstr "Impossibile cancellare la directory %1"
 
 #: CRM/Utils/File.php
 msgid "Failed to clean temp dir: %1"
@@ -17037,7 +17038,7 @@ msgstr ""
 
 #: templates/CRM/Contact/Page/Inline/CommunicationPreferences.tpl
 msgid "Edit communication preferences"
-msgstr ""
+msgstr "Modifica le preferenze per la comunicazione"
 
 #: templates/CRM/Contact/Page/Inline/CommunicationPreferences.tpl
 msgid "Customized"
@@ -20900,7 +20901,7 @@ msgstr ""
 
 #: xml/templates/civicrm_data.tpl
 msgid "Mailing Label Format"
-msgstr ""
+msgstr "Formato Etichetta Mailing"
 
 #: xml/templates/civicrm_data.tpl
 msgid "Activity Contacts"
@@ -21388,7 +21389,7 @@ msgstr ""
 
 #: xml/templates/civicrm_data.tpl
 msgid "Communication Preferences"
-msgstr ""
+msgstr "Preferenze per la comunicazione"
 
 #: xml/templates/civicrm_data.tpl
 msgid "Tags and Groups"
@@ -24815,7 +24816,7 @@ msgstr ""
 
 #: CRM/Activity/Task.php
 msgid "Email - send now"
-msgstr ""
+msgstr "Email - invia ora"
 
 #: CRM/Activity/Task.php
 msgid "SMS - send reply"
@@ -25009,11 +25010,11 @@ msgstr ""
 
 #: CRM/Contact/Task.php
 msgid "Group - add contacts"
-msgstr ""
+msgstr "Gruppi - aggiungi contatti"
 
 #: CRM/Contact/Task.php
 msgid "Group - remove contacts"
-msgstr ""
+msgstr "Gruppi - rimuovi contatti"
 
 #: CRM/Contact/Task.php
 msgid "Tag - add to contacts"
@@ -25029,7 +25030,7 @@ msgstr ""
 
 #: CRM/Contact/Task.php
 msgid "Email - send now (to 50 or less)"
-msgstr ""
+msgstr "Email - Invia ora (fino a 50)"
 
 #: CRM/Contact/Task.php
 msgid "Delete contacts"
@@ -25037,19 +25038,19 @@ msgstr ""
 
 #: CRM/Contact/Task.php
 msgid "Add activity"
-msgstr ""
+msgstr "Aggiungi Attività"
 
 #: CRM/Contact/Task.php
 msgid "Group - create smart group"
-msgstr ""
+msgstr "Gruppi - crea Smart Group"
 
 #: CRM/Contact/Task.php
 msgid "Group - update smart group"
-msgstr ""
+msgstr "Gruppi - aggiorna smart group"
 
 #: CRM/Contact/Task.php
 msgid "Mailing labels - print"
-msgstr ""
+msgstr "Etichette Mailing - stampa"
 
 #: CRM/Contact/Task.php
 msgid "PDF letters - print"
@@ -25057,11 +25058,11 @@ msgstr ""
 
 #: CRM/Contact/Task.php
 msgid "Email - unhold addresses"
-msgstr ""
+msgstr "Email - sblocca"
 
 #: CRM/Contact/Task.php
 msgid "Communication preferences - alter"
-msgstr ""
+msgstr "Modifica le preferenze per la comunicazione"
 
 #: CRM/Contact/Task.php
 msgid "Restore contacts from trash"
@@ -25077,7 +25078,7 @@ msgstr ""
 
 #: CRM/Contact/Task.php
 msgid "Add relationship - to %1"
-msgstr ""
+msgstr "Aggiungi Relazione per %1"
 
 #: CRM/Contact/Task.php
 msgid "Merge contacts"
@@ -25093,7 +25094,7 @@ msgstr ""
 
 #: CRM/Contact/Task.php
 msgid "Email - schedule/send via CiviMail"
-msgstr ""
+msgstr "Email - scedula/invia attraverso CiviMail"
 
 #: CRM/Core/BAO/ConfigSetting.php
 msgid "WARNING: The setting (%1) has been reverted."
@@ -26101,7 +26102,7 @@ msgid ""
 "This token may also be used in regular 'Email - send now' messages and in "
 "other Message Templates. The token is replaced by the address entered below "
 "when the message is sent."
-msgstr ""
+msgstr "Il sistema di invio email CiviMail include l'indirizzo dell'organizzazione mittente. Questo si realizza mettendo la parola chiave %1 sia nel corpo che nel footer della mail. Questa parola chiave può anche essere usata nella normale funzione di invio messaggi 'Email - invia ora' e in altri modelli Messaggi. La parola chiave è sostituita dall'indirizzo inserito qui in basso quando viene inviato il messaggio."
 
 #: templates/CRM/Contact/Form/Merge.tpl
 msgid ""
