--- a/po/es_ES/common-base.po
+++ b/po/es_ES/common-base.po
@@ -14,7 +14,7 @@
 # Jack R. <dny1020@aol.com>, 2013
 # fmcooke <fmcooke@yahoo.com>, 2012
 # fmcooke <fmcooke@yahoo.com>, 2012
-# francescbassas <francesc@babu.cat>, 2014-2015
+# francescbassas <francesc@babu.cat>, 2014-2016
 # francescbassas <francesc@babu.cat>, 2014
 # ixiam <info@ixiam.com>, 2013-2016
 # Irene Estefania <iestefania@ndi.org>, 2015
@@ -41,8 +41,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-05-09 13:33-0400\n"
-"PO-Revision-Date: 2016-05-20 12:57+0000\n"
-"Last-Translator: ixiam <info@ixiam.com>\n"
+"PO-Revision-Date: 2016-06-20 11:46+0000\n"
+"Last-Translator: francescbassas <francesc@babu.cat>\n"
 "Language-Team: Spanish (http://www.transifex.com/civicrm/civicrm/language/es/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -24222,7 +24222,7 @@ msgstr "Falla al encontrar o crear la tabla de encolado."
 
 #: CRM/Upgrade/Headless.php CRM/Upgrade/Page/Upgrade.php
 msgid "CiviCRM Upgrade Tasks"
-msgstr "Tareas de actualizacion de CiviCRM"
+msgstr "Tareas de actualización de CiviCRM"
 
 #: CRM/Upgrade/Incremental/Legacy.php
 msgid ""
