--- a/po/it_IT/common-components.po
+++ b/po/it_IT/common-components.po
@@ -7,14 +7,15 @@
 # Antonio de Simone <desimone.webdesign@gmail.com>, 2012
 # Pietro De Nicolao <powerpdn@gmail.com>, 2013
 # Piotr Szotkowski <chastell@chastell.net>, 2011
+# Samuele Masetto <samuele.masetto@perora.it>, 2016
 # simone sandri <simone.povoscania@hotmail.it>, 2011
 # supershaula <supershaula@gmail.com>, 2013
 msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-05-09 13:33-0400\n"
-"PO-Revision-Date: 2016-05-09 17:37+0000\n"
-"Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
+"PO-Revision-Date: 2016-06-20 06:53+0000\n"
+"Last-Translator: Samuele Masetto <samuele.masetto@perora.it>\n"
 "Language-Team: Italian (http://www.transifex.com/civicrm/civicrm/language/it/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -753,7 +754,7 @@ msgstr ""
 #: CRM/Contribute/Form/AdditionalInfo.php
 #: templates/CRM/Contribute/Form/ContributionView.tpl CRM/PCP/Form/Event.php
 msgid "Online Contribution Page"
-msgstr ""
+msgstr "Pagina dei contributi online"
 
 #: CRM/Contribute/Form/AdditionalInfo.php
 #: CRM/Contribute/Form/ContributionPage/Amount.php
