po: update po/it_IT/common-base.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/it_IT/common-base.po
+++ b/po/it_IT/common-base.po
@@ -23,7 +23,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-05-09 13:33-0400\n"
-"PO-Revision-Date: 2016-06-18 14:55+0000\n"
+"PO-Revision-Date: 2016-06-20 06:43+0000\n"
 "Last-Translator: Samuele Masetto <samuele.masetto@perora.it>\n"
 "Language-Team: Italian (http://www.transifex.com/civicrm/civicrm/language/it/)\n"
 "MIME-Version: 1.0\n"
@@ -1312,8 +1312,8 @@ msgstr ""
 #: CRM/Activity/Form/Task/RemoveFromTag.php
 msgid "%count activity un-tagged"
 msgid_plural "%count activities un-tagged"
-msgstr[0] ""
-msgstr[1] ""
+msgstr[0] "%count attività un-tagged"
+msgstr[1] "%count attività un-tagged"
 
 #: CRM/Activity/Form/Task/RemoveFromTag.php
 msgid "1 activity already did not have this tag"
@@ -3468,7 +3468,7 @@ msgstr "Il record di contatto non esiste"
 
 #: CRM/Contact/Form/Merge.php
 msgid "Merge %1 contacts"
-msgstr ""
+msgstr "Unisci %1 Contatti"
 
 #: CRM/Contact/Form/Merge.php
 msgid "Merge and Goto Next Pair"
@@ -3496,15 +3496,15 @@ msgstr ""
 
 #: CRM/Contact/Form/Merge.php
 msgid "Contact ID %1 has been deleted."
-msgstr ""
+msgstr "Il contatto ID %1 è stato cancellato"
 
 #: CRM/Contact/Form/Merge.php
 msgid "Contacts Merged"
-msgstr ""
+msgstr "Contatti uniti"
 
 #: CRM/Contact/Form/Merge.php
 msgid "Contact ID %1 has been merged and deleted."
-msgstr ""
+msgstr "Il contatto è stato unito e cancellato"
 
 #: CRM/Contact/Form/ProfileContact.php
 msgid ""
@@ -4530,14 +4530,14 @@ msgstr ""
 #: CRM/Contact/Form/Task/Delete.php
 msgid "%1 has been restored from the trash."
 msgid_plural "%count contacts restored from trash."
-msgstr[0] ""
-msgstr[1] ""
+msgstr[0] "%1 è stato ripristinato dal cestino"
+msgstr[1] "%count contatti ripristinati dal cestino."
 
 #: CRM/Contact/Form/Task/Delete.php
 msgid "%1 has been permanently deleted."
 msgid_plural "%count contacts permanently deleted."
-msgstr[0] ""
-msgstr[1] ""
+msgstr[0] "%1 è stato definitivamente cancellato"
+msgstr[1] "%count contatti cancellati definitivamente"
 
 #: CRM/Contact/Form/Task/Delete.php
 msgid "%1 has been moved to the trash."
@@ -4709,7 +4709,7 @@ msgstr "I record selezionati devono avere la stessa Tipologia di Contatto (es. t
 
 #: CRM/Contact/Form/Task/PDFLetterCommon.php
 msgid "Create Printable Letter (PDF) for %1"
-msgstr ""
+msgstr "Crea Lettere Stampabili (PDF) per %1"
 
 #: CRM/Contact/Form/Task/PDFLetterCommon.php
 msgid "Page Format: %1"
@@ -4869,8 +4869,8 @@ msgstr ""
 #: CRM/Contact/Form/Task/RemoveFromTag.php
 msgid "%count contact un-tagged"
 msgid_plural "%count contacts un-tagged"
-msgstr[0] ""
-msgstr[1] ""
+msgstr[0] "%count contatto un-tagged"
+msgstr[1] "%count contatti un-tagged"
 
 #: CRM/Contact/Form/Task/RemoveFromTag.php
 msgid "1 contact already did not have this tag"
@@ -5286,7 +5286,7 @@ msgstr "durante il processo di unione in modalità sicura."
 
 #: CRM/Contact/Page/DedupeFind.php
 msgid "Merge Complete"
-msgstr ""
+msgstr "Unione completata"
 
 #: CRM/Contact/Page/DedupeFind.php
 msgid "Batch Merge Task in progress"
@@ -5927,7 +5927,7 @@ msgstr ""
 
 #: CRM/Core/BAO/File.php
 msgid "Delete All Attachment(s)"
-msgstr ""
+msgstr "Cancella tutti i File Allegato"
 
 #: CRM/Core/BAO/File.php
 msgid "Attach File"
@@ -7402,7 +7402,7 @@ msgstr "Ha separatore"
 
 #: CRM/Core/DAO/Note.php
 msgid "Note ID"
-msgstr ""
+msgstr "ID nota"
 
 #: CRM/Core/DAO/Note.php
 msgid "Note Entity"
@@ -9085,7 +9085,7 @@ msgstr ""
 
 #: CRM/Core/Permission.php
 msgid "Delete activities"
-msgstr ""
+msgstr "Elimina attività"
 
 #: CRM/Core/Permission.php
 msgid "access CiviCRM"
@@ -9758,7 +9758,7 @@ msgstr "Importo Netto"
 
 #: CRM/Core/SelectValues.php
 msgid "Non-deductible Amount"
-msgstr ""
+msgstr "Importo Non-deducibile"
 
 #: CRM/Core/SelectValues.php
 msgid "Contribution Receive Date"
@@ -9926,7 +9926,7 @@ msgstr ""
 
 #: CRM/Core/SelectValues.php xml/templates/civicrm_data.tpl
 msgid "Payment"
-msgstr ""
+msgstr "Pagamento"
 
 #: CRM/Core/SelectValues.php
 msgid "Report"
@@ -21081,11 +21081,11 @@ msgstr "Elimina Ruolo Caso"
 
 #: xml/templates/civicrm_data.tpl
 msgid "Print PDF Letter"
-msgstr ""
+msgstr "Crea una Lettera PDF"
 
 #: xml/templates/civicrm_data.tpl
 msgid "Print PDF Letter."
-msgstr ""
+msgstr "Crea una Lettera PDF"
 
 #: xml/templates/civicrm_data.tpl
 msgid "Merge Case"
@@ -21221,7 +21221,7 @@ msgstr ""
 
 #: xml/templates/civicrm_data.tpl
 msgid "Contact Merged"
-msgstr ""
+msgstr "Contatto unito"
 
 #: xml/templates/civicrm_data.tpl
 msgid "Female"
@@ -21409,11 +21409,11 @@ msgstr ""
 
 #: xml/templates/civicrm_data.tpl
 msgid "Assigned Activities"
-msgstr ""
+msgstr "Attività assegnate"
 
 #: xml/templates/civicrm_data.tpl
 msgid "Invoices / Credit Notes"
-msgstr ""
+msgstr "Fatture / Note di credito"
 
 #: xml/templates/civicrm_data.tpl
 msgid "Street Address Parsing"
@@ -22000,11 +22000,11 @@ msgstr ""
 
 #: xml/templates/civicrm_data.tpl
 msgid "Export Contact"
-msgstr ""
+msgstr "Esporta Contatti"
 
 #: xml/templates/civicrm_data.tpl
 msgid "Export Contribution"
-msgstr ""
+msgstr "Esporta Contributi"
 
 #: xml/templates/civicrm_data.tpl
 msgid "Export Membership"
@@ -24777,7 +24777,7 @@ msgstr "Tipo di attività "
 #: CRM/Activity/Form/Task/Batch.php CRM/Activity/Form/Task/PickProfile.php
 #: CRM/Activity/Task.php
 msgid "Update multiple activities"
-msgstr ""
+msgstr "Aggiornamento multiplo delle attività"
 
 #: CRM/Activity/Form/Task/Batch.php
 msgid ""
@@ -24808,11 +24808,11 @@ msgstr ""
 
 #: CRM/Activity/Task.php CRM/Contact/Task.php
 msgid "Print selected rows"
-msgstr ""
+msgstr "Stampa le Righe Selezionate"
 
 #: CRM/Activity/Task.php
 msgid "Export activities"
-msgstr ""
+msgstr "Esporta Attività"
 
 #: CRM/Activity/Task.php
 msgid "Email - send now"
@@ -24824,11 +24824,11 @@ msgstr ""
 
 #: CRM/Activity/Task.php
 msgid "Tag - add to activities"
-msgstr ""
+msgstr "Tag - aggiungi alle attività"
 
 #: CRM/Activity/Task.php
 msgid "Tag - remove from activities"
-msgstr ""
+msgstr "Tag - rimuovi dalle attività"
 
 #: CRM/Activity/Task.php
 msgid "File on case"
@@ -24952,7 +24952,7 @@ msgstr ""
 #: CRM/Contact/Form/Task/Batch.php CRM/Contact/Form/Task/PickProfile.php
 #: CRM/Contact/Task.php
 msgid "Update multiple contacts"
-msgstr ""
+msgstr "Aggiornamento multiplo dei contatti"
 
 #: CRM/Contact/Form/Task/Batch.php
 msgid ""
@@ -25018,15 +25018,15 @@ msgstr "Gruppi - rimuovi contatti"
 
 #: CRM/Contact/Task.php
 msgid "Tag - add to contacts"
-msgstr ""
+msgstr "Tag - aggiungi ai contatti"
 
 #: CRM/Contact/Task.php
 msgid "Tag - remove from contacts"
-msgstr ""
+msgstr "Tag - rimuovi dai contatti"
 
 #: CRM/Contact/Task.php
 msgid "Export contacts"
-msgstr ""
+msgstr "Esporta Contatti"
 
 #: CRM/Contact/Task.php
 msgid "Email - send now (to 50 or less)"
@@ -25034,7 +25034,7 @@ msgstr "Email - Invia ora (fino a 50)"
 
 #: CRM/Contact/Task.php
 msgid "Delete contacts"
-msgstr ""
+msgstr "Elimina contatti"
 
 #: CRM/Contact/Task.php
 msgid "Add activity"
@@ -25054,7 +25054,7 @@ msgstr "Etichette Mailing - stampa"
 
 #: CRM/Contact/Task.php
 msgid "PDF letters - print"
-msgstr ""
+msgstr "Lettera PDF - stampa"
 
 #: CRM/Contact/Task.php
 msgid "Email - unhold addresses"
@@ -25066,11 +25066,11 @@ msgstr "Modifica le preferenze per la comunicazione"
 
 #: CRM/Contact/Task.php
 msgid "Restore contacts from trash"
-msgstr ""
+msgstr "Ripristina i contatti dal cestino"
 
 #: CRM/Contact/Task.php
 msgid "Delete permanently"
-msgstr ""
+msgstr "Cancella definitivamente"
 
 #: CRM/Contact/Task.php
 msgid "SMS - schedule/send"
@@ -25082,7 +25082,7 @@ msgstr "Aggiungi Relazione per %1"
 
 #: CRM/Contact/Task.php
 msgid "Merge contacts"
-msgstr ""
+msgstr "Unisci Contatti"
 
 #: CRM/Contact/Task.php
 msgid "Map contacts"
@@ -25090,11 +25090,11 @@ msgstr ""
 
 #: CRM/Contact/Task.php
 msgid "Register participants for event"
-msgstr ""
+msgstr "Registra i partecipanti per l'evento"
 
 #: CRM/Contact/Task.php
 msgid "Email - schedule/send via CiviMail"
-msgstr "Email - scedula/invia attraverso CiviMail"
+msgstr "Email - schedula/invia attraverso CiviMail"
 
 #: CRM/Core/BAO/ConfigSetting.php
 msgid "WARNING: The setting (%1) has been reverted."
@@ -25119,7 +25119,7 @@ msgstr ""
 #: CRM/Core/BAO/UFField.php CRM/Core/OptionValue.php CRM/Core/SelectValues.php
 #: CRM/Export/BAO/Export.php xml/templates/civicrm_data.tpl
 msgid "Payment Method"
-msgstr ""
+msgstr "Metodo di pagamento"
 
 #: CRM/Core/Config/MagicMerge.php
 msgid ""
@@ -25524,11 +25524,11 @@ msgstr ""
 
 #: CRM/Core/Payment.php
 msgid "Online Contribution: "
-msgstr ""
+msgstr "Contributo online:"
 
 #: CRM/Core/Permission.php
 msgid "force merge duplicate contacts"
-msgstr ""
+msgstr "forzare l'unione dei contatti duplicati"
 
 #: CRM/Core/SelectValues.php
 msgid "Recurring Contributions"
@@ -25628,7 +25628,7 @@ msgstr ""
 
 #: CRM/Dedupe/Merger.php
 msgid "Contact(s) were merged."
-msgstr ""
+msgstr "I contatti sono stati uniti."
 
 #: CRM/Dedupe/Merger.php
 msgid "Contact(s) were skipped."
@@ -25636,7 +25636,7 @@ msgstr ""
 
 #: CRM/Dedupe/Merger.php
 msgid "Contact ID %1 has been merged into Contact ID %2 and deleted."
-msgstr ""
+msgstr "ID Contatti %1 è stato unito nell'ID contatto %2 e poi cancellato"
 
 #: CRM/Export/Form/Select.php
 msgid "Export Options"
@@ -26344,7 +26344,7 @@ msgstr ""
 
 #: xml/templates/civicrm_data.tpl
 msgid "Payment Methods"
-msgstr ""
+msgstr "Metodi di Pagamento"
 
 #: xml/templates/civicrm_data.tpl
 msgid "Relative Date Filters"
@@ -26352,7 +26352,7 @@ msgstr ""
 
 #: xml/templates/civicrm_data.tpl CRM/Upgrade/Incremental/php/FourSeven.php
 msgid "Contact Deleted by Merge"
-msgstr ""
+msgstr "Contatto cancellato dopo essere stato unito"
 
 #: xml/templates/civicrm_data.tpl CRM/Upgrade/Incremental/php/FourSeven.php
 msgid "Contact was merged into another contact"
