--- a/po/it_IT/contribute.po
+++ b/po/it_IT/contribute.po
@@ -8,12 +8,13 @@
 # Pietro De Nicolao <powerpdn@gmail.com>, 2013
 # Piotr Szotkowski <chastell@chastell.net>, 2011
 # LinoLinux <reni.marco@gmail.com>, 2014
+# Samuele Masetto <samuele.masetto@perora.it>, 2016
 msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-05-09 13:33-0400\n"
-"PO-Revision-Date: 2016-06-02 19:40+0000\n"
-"Last-Translator: Francesco Garganese <francesco.garganese@aeromnia.aero>\n"
+"PO-Revision-Date: 2016-06-20 06:47+0000\n"
+"Last-Translator: Samuele Masetto <samuele.masetto@perora.it>\n"
 "Language-Team: Italian (http://www.transifex.com/civicrm/civicrm/language/it/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -287,7 +288,7 @@ msgstr ""
 
 #: CRM/Contribute/DAO/Contribution.php CRM/Contribute/Form/AdditionalInfo.php
 msgid "Credit Note ID"
-msgstr ""
+msgstr "Codice interno del contributo"
 
 #: CRM/Contribute/DAO/ContributionPage.php
 msgid "Contribution Page Introduction Text"
@@ -711,7 +712,7 @@ msgstr "Questo ID fattura esiste già nel database."
 
 #: CRM/Contribute/Form/AdditionalInfo.php
 msgid "This Credit Note ID already exists in the database."
-msgstr ""
+msgstr "Questo codice interno del contributo esiste già nel database."
 
 #: CRM/Contribute/Form/AdditionalInfo.php
 msgid "Send Initial Reminder"
@@ -2315,7 +2316,7 @@ msgstr "ID di riferimento interno univoco del contributo."
 
 #: templates/CRM/Contribute/Form/AdditionalInfo/AdditionalDetail.tpl
 msgid "Unique internal Credit Note ID for this contribution."
-msgstr ""
+msgstr "Codice univoco da assegnare a questo contributo"
 
 #: templates/CRM/Contribute/Form/AdditionalInfo/AdditionalDetail.tpl
 msgid "Date that a thank-you message was sent to the contributor."
@@ -3655,11 +3656,11 @@ msgstr ""
 
 #: templates/CRM/Contribute/Form/ContributionPage/ThankYou.hlp
 msgid "One-time online contributions"
-msgstr ""
+msgstr "Contributo online una-tantum"
 
 #: templates/CRM/Contribute/Form/ContributionPage/ThankYou.hlp
 msgid "Recurring online contributions (if enabled for this page)"
-msgstr ""
+msgstr "Contributo online ricorrente (se abilitato in questa pagina)"
 
 #: templates/CRM/Contribute/Form/ContributionPage/ThankYou.hlp
 msgid "Automatically renewing membership payments (if enabled for this page)"
@@ -5076,7 +5077,7 @@ msgstr ""
 
 #: CRM/Contribute/Form/Contribution/Confirm.php
 msgid "Online Contribution:"
-msgstr ""
+msgstr "Contributo online:"
 
 #: CRM/Contribute/Form/Contribution/Main.php
 msgid ""
