po: update po/ca_ES/case.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/ca_ES/case.po
+++ b/po/ca_ES/case.po
@@ -11,7 +11,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-05-09 13:33-0400\n"
-"PO-Revision-Date: 2016-05-26 12:10+0000\n"
+"PO-Revision-Date: 2016-06-21 09:31+0000\n"
 "Last-Translator: francescbassas <francesc@babu.cat>\n"
 "Language-Team: Catalan (http://www.transifex.com/civicrm/civicrm/language/ca/)\n"
 "MIME-Version: 1.0\n"
@@ -349,7 +349,7 @@ msgstr[1] ""
 
 #: CRM/Case/Form/CaseView.php
 msgid "Add Activity"
-msgstr ""
+msgstr "Afegeix una activitat"
 
 #: CRM/Case/Form/CaseView.php
 msgid "Activity Audit"
@@ -610,7 +610,7 @@ msgstr ""
 
 #: ang/crmCaseType/activityTypesTable.html
 msgid "Add activity type"
-msgstr ""
+msgstr "Afegeix un tipus d'activitat"
 
 #: ang/crmCaseType/caseTypeDetails.html
 msgid "WARNING: The case type name includes deprecated characters."
