po: update po/ca_ES/common-base.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/ca_ES/common-base.po
+++ b/po/ca_ES/common-base.po
@@ -16,7 +16,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-05-09 13:33-0400\n"
-"PO-Revision-Date: 2016-06-09 08:56+0000\n"
+"PO-Revision-Date: 2016-06-21 10:06+0000\n"
 "Last-Translator: francescbassas <francesc@babu.cat>\n"
 "Language-Team: Catalan (http://www.transifex.com/civicrm/civicrm/language/ca/)\n"
 "MIME-Version: 1.0\n"
@@ -24801,7 +24801,7 @@ msgstr ""
 
 #: CRM/Activity/Task.php CRM/Contact/Task.php
 msgid "Print selected rows"
-msgstr ""
+msgstr "Imprimeix les files seleccionades"
 
 #: CRM/Activity/Task.php
 msgid "Export activities"
@@ -24809,7 +24809,7 @@ msgstr ""
 
 #: CRM/Activity/Task.php
 msgid "Email - send now"
-msgstr ""
+msgstr "Correu electrònic - envia ara"
 
 #: CRM/Activity/Task.php
 msgid "SMS - send reply"
@@ -24817,11 +24817,11 @@ msgstr ""
 
 #: CRM/Activity/Task.php
 msgid "Tag - add to activities"
-msgstr ""
+msgstr "Etiqueta - afegeix a les activitats"
 
 #: CRM/Activity/Task.php
 msgid "Tag - remove from activities"
-msgstr ""
+msgstr "Etiqueta - elimina de les activitats"
 
 #: CRM/Activity/Task.php
 msgid "File on case"
@@ -24945,7 +24945,7 @@ msgstr ""
 #: CRM/Contact/Form/Task/Batch.php CRM/Contact/Form/Task/PickProfile.php
 #: CRM/Contact/Task.php
 msgid "Update multiple contacts"
-msgstr ""
+msgstr "Actualitza diversos contactes"
 
 #: CRM/Contact/Form/Task/Batch.php
 msgid ""
@@ -25003,31 +25003,31 @@ msgstr ""
 
 #: CRM/Contact/Task.php
 msgid "Group - add contacts"
-msgstr ""
+msgstr "Grup - afegeix els contactes"
 
 #: CRM/Contact/Task.php
 msgid "Group - remove contacts"
-msgstr ""
+msgstr "Grup - elimina els contactes"
 
 #: CRM/Contact/Task.php
 msgid "Tag - add to contacts"
-msgstr ""
+msgstr "Etiqueta - afegeix als contactes"
 
 #: CRM/Contact/Task.php
 msgid "Tag - remove from contacts"
-msgstr ""
+msgstr "Etiqueta - elimina dels contactes"
 
 #: CRM/Contact/Task.php
 msgid "Export contacts"
-msgstr ""
+msgstr "Exporta contactes"
 
 #: CRM/Contact/Task.php
 msgid "Email - send now (to 50 or less)"
-msgstr ""
+msgstr "Correu electrònic - envia ara (fins a 50 o menys)"
 
 #: CRM/Contact/Task.php
 msgid "Delete contacts"
-msgstr ""
+msgstr "Elimina contactes"
 
 #: CRM/Contact/Task.php
 msgid "Add activity"
@@ -25035,35 +25035,35 @@ msgstr ""
 
 #: CRM/Contact/Task.php
 msgid "Group - create smart group"
-msgstr ""
+msgstr "Grup - crea un grup intel·ligent"
 
 #: CRM/Contact/Task.php
 msgid "Group - update smart group"
-msgstr ""
+msgstr "Grup - actualitza el grup intel·ligent"
 
 #: CRM/Contact/Task.php
 msgid "Mailing labels - print"
-msgstr ""
+msgstr "Etiquetes de correu - imprimeix"
 
 #: CRM/Contact/Task.php
 msgid "PDF letters - print"
-msgstr ""
+msgstr "Cartas PDF - imprimeix"
 
 #: CRM/Contact/Task.php
 msgid "Email - unhold addresses"
-msgstr ""
+msgstr "Correu electrònic - allibera les adreces"
 
 #: CRM/Contact/Task.php
 msgid "Communication preferences - alter"
-msgstr ""
+msgstr "Preferències de comunicació - modifica"
 
 #: CRM/Contact/Task.php
 msgid "Restore contacts from trash"
-msgstr ""
+msgstr "Restaura els contactes de la paperera"
 
 #: CRM/Contact/Task.php
 msgid "Delete permanently"
-msgstr ""
+msgstr "Elimina definitivament"
 
 #: CRM/Contact/Task.php
 msgid "SMS - schedule/send"
@@ -25071,11 +25071,11 @@ msgstr ""
 
 #: CRM/Contact/Task.php
 msgid "Add relationship - to %1"
-msgstr ""
+msgstr "Afegeix una relació - a %1"
 
 #: CRM/Contact/Task.php
 msgid "Merge contacts"
-msgstr ""
+msgstr "Combina els contactes"
 
 #: CRM/Contact/Task.php
 msgid "Map contacts"
@@ -25083,11 +25083,11 @@ msgstr ""
 
 #: CRM/Contact/Task.php
 msgid "Register participants for event"
-msgstr ""
+msgstr "Inscriure participants a un esdeveniment"
 
 #: CRM/Contact/Task.php
 msgid "Email - schedule/send via CiviMail"
-msgstr ""
+msgstr "Correu electrònic - programa/envia via CiviMail"
 
 #: CRM/Core/BAO/ConfigSetting.php
 msgid "WARNING: The setting (%1) has been reverted."
