--- a/po/es_ES/contribute.po
+++ b/po/es_ES/contribute.po
@@ -9,7 +9,7 @@
 # Carlos Capote <carloscapote@masticable.org>, 2014
 # cero <videoalertas@gmail.com>, 2011
 # Estefanía Mediavilla <e.mediavilla@ixiam.com>, 2014
-# francescbassas <francesc@babu.cat>, 2014
+# francescbassas <francesc@babu.cat>, 2014,2016
 # Gorehide Tresde <gorehide@gmail.com>, 2016
 # ixiam <info@ixiam.com>, 2013-2014,2016
 # iWi development <iwidevelopment@gmail.com>, 2011-2012
@@ -25,8 +25,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-05-09 13:33-0400\n"
-"PO-Revision-Date: 2016-05-20 12:52+0000\n"
-"Last-Translator: ixiam <info@ixiam.com>\n"
+"PO-Revision-Date: 2016-06-21 10:47+0000\n"
+"Last-Translator: francescbassas <francesc@babu.cat>\n"
 "Language-Team: Spanish (http://www.transifex.com/civicrm/civicrm/language/es/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -4683,7 +4683,7 @@ msgstr "Si introduce un pago distinto al importe programado, elija una de estas 
 msgid ""
 "Click <a %1>Record Contribution</a> to record a new contribution received "
 "from this contact."
-msgstr ""
+msgstr "Haga clic en <a %1>Registrar una contribución</a> para registrar una nueva contribución recibida de este contacto."
 
 #: templates/CRM/Contribute/Page/Tab.tpl
 msgid ""
