po: update po/es_ES/common-base.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/es_ES/common-base.po
+++ b/po/es_ES/common-base.po
@@ -41,7 +41,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-05-09 13:33-0400\n"
-"PO-Revision-Date: 2016-06-20 11:46+0000\n"
+"PO-Revision-Date: 2016-06-21 10:06+0000\n"
 "Last-Translator: francescbassas <francesc@babu.cat>\n"
 "Language-Team: Spanish (http://www.transifex.com/civicrm/civicrm/language/es/)\n"
 "MIME-Version: 1.0\n"
@@ -24826,7 +24826,7 @@ msgstr ""
 
 #: CRM/Activity/Task.php CRM/Contact/Task.php
 msgid "Print selected rows"
-msgstr ""
+msgstr "Imprimir las filas seleccionadas"
 
 #: CRM/Activity/Task.php
 msgid "Export activities"
@@ -24834,7 +24834,7 @@ msgstr ""
 
 #: CRM/Activity/Task.php
 msgid "Email - send now"
-msgstr ""
+msgstr "Correo electrónico - enviar ahora"
 
 #: CRM/Activity/Task.php
 msgid "SMS - send reply"
@@ -24842,11 +24842,11 @@ msgstr ""
 
 #: CRM/Activity/Task.php
 msgid "Tag - add to activities"
-msgstr ""
+msgstr "Etiqueta - añadir a actividades"
 
 #: CRM/Activity/Task.php
 msgid "Tag - remove from activities"
-msgstr ""
+msgstr "Etiqueta - eliminar a actividades"
 
 #: CRM/Activity/Task.php
 msgid "File on case"
@@ -24970,7 +24970,7 @@ msgstr ""
 #: CRM/Contact/Form/Task/Batch.php CRM/Contact/Form/Task/PickProfile.php
 #: CRM/Contact/Task.php
 msgid "Update multiple contacts"
-msgstr ""
+msgstr "Actualizar varios contactos"
 
 #: CRM/Contact/Form/Task/Batch.php
 msgid ""
@@ -25028,19 +25028,19 @@ msgstr ""
 
 #: CRM/Contact/Task.php
 msgid "Group - add contacts"
-msgstr ""
+msgstr "Grupo - añadir contactos"
 
 #: CRM/Contact/Task.php
 msgid "Group - remove contacts"
-msgstr ""
+msgstr "Grupo - eliminar contactos"
 
 #: CRM/Contact/Task.php
 msgid "Tag - add to contacts"
-msgstr ""
+msgstr "Etiqueta - añadir a contactos"
 
 #: CRM/Contact/Task.php
 msgid "Tag - remove from contacts"
-msgstr ""
+msgstr "Etiqueta - eliminar de contactos"
 
 #: CRM/Contact/Task.php
 msgid "Export contacts"
@@ -25048,11 +25048,11 @@ msgstr ""
 
 #: CRM/Contact/Task.php
 msgid "Email - send now (to 50 or less)"
-msgstr ""
+msgstr "Correo electrónico - enviar ahora (a 50 o menos)"
 
 #: CRM/Contact/Task.php
 msgid "Delete contacts"
-msgstr ""
+msgstr "Elimina contactos"
 
 #: CRM/Contact/Task.php
 msgid "Add activity"
@@ -25060,35 +25060,35 @@ msgstr ""
 
 #: CRM/Contact/Task.php
 msgid "Group - create smart group"
-msgstr ""
+msgstr "Grupo - crear grupo inteligente"
 
 #: CRM/Contact/Task.php
 msgid "Group - update smart group"
-msgstr ""
+msgstr "Grupo - actualizar grupo inteligente"
 
 #: CRM/Contact/Task.php
 msgid "Mailing labels - print"
-msgstr ""
+msgstr "Etiquetas de correo - imprimir"
 
 #: CRM/Contact/Task.php
 msgid "PDF letters - print"
-msgstr ""
+msgstr "Cartas PDF - imprimir"
 
 #: CRM/Contact/Task.php
 msgid "Email - unhold addresses"
-msgstr ""
+msgstr "Correo electrónico - liberar direcciones"
 
 #: CRM/Contact/Task.php
 msgid "Communication preferences - alter"
-msgstr ""
+msgstr "Preferencias de comunicación - modificar"
 
 #: CRM/Contact/Task.php
 msgid "Restore contacts from trash"
-msgstr ""
+msgstr "Restaurar contactos de la papelera"
 
 #: CRM/Contact/Task.php
 msgid "Delete permanently"
-msgstr ""
+msgstr "Elimina permanentemente"
 
 #: CRM/Contact/Task.php
 msgid "SMS - schedule/send"
@@ -25096,11 +25096,11 @@ msgstr ""
 
 #: CRM/Contact/Task.php
 msgid "Add relationship - to %1"
-msgstr ""
+msgstr "Añadir relación - a %1"
 
 #: CRM/Contact/Task.php
 msgid "Merge contacts"
-msgstr ""
+msgstr "Unificar contactos"
 
 #: CRM/Contact/Task.php
 msgid "Map contacts"
@@ -25108,11 +25108,11 @@ msgstr ""
 
 #: CRM/Contact/Task.php
 msgid "Register participants for event"
-msgstr ""
+msgstr "Registrar participantes a un evento"
 
 #: CRM/Contact/Task.php
 msgid "Email - schedule/send via CiviMail"
-msgstr ""
+msgstr "Correo electrónico - programar/enviar via CiviMail"
 
 #: CRM/Core/BAO/ConfigSetting.php
 msgid "WARNING: The setting (%1) has been reverted."
