po: update po/ca_ES/drupal-civicrm.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/ca_ES/drupal-civicrm.po
+++ b/po/ca_ES/drupal-civicrm.po
@@ -10,7 +10,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2011-03-27 21:13+0200\n"
-"PO-Revision-Date: 2016-05-26 09:38+0000\n"
+"PO-Revision-Date: 2016-06-21 09:34+0000\n"
 "Last-Translator: francescbassas <francesc@babu.cat>\n"
 "Language-Team: Catalan (http://www.transifex.com/civicrm/civicrm/language/ca/)\n"
 "MIME-Version: 1.0\n"
@@ -336,7 +336,7 @@ msgstr "elimina contactes"
 
 #: CRM/Core/Permission.php
 msgid "access deleted contacts"
-msgstr "accedir a contactes eliminats"
+msgstr "accedeix a contactes eliminats"
 
 #: CRM/Core/Permission.php
 msgid "import contacts"
