--- a/po/es_ES/case.po
+++ b/po/es_ES/case.po
@@ -5,11 +5,11 @@
 # Translators:
 # Adrian Torralba Roman, 2016
 # ixiam <info@ixiam.com>, 2013
-# francescbassas <francesc@babu.cat>, 2015
+# francescbassas <francesc@babu.cat>, 2015-2016
 # ixiam <info@ixiam.com>, 2013,2016
 # Juan Garcia <atc@intellig.es>, 2011
 # Marcela Garcia-Casteblanco <marcegcol@hotmail.com>, 2015
-# Marti <m.prat@ixiam.com>, 2014-2015
+# Marti Prat <m.prat@ixiam.com>, 2014-2015
 # Omar Bautista González <omarbautistag@gmail.com>, 2011
 # Omar Bautista González <omarbautistag@gmail.com>, 2011
 # Piotr Szotkowski <chastell@chastell.net>, 2011
@@ -18,8 +18,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-05-09 13:33-0400\n"
-"PO-Revision-Date: 2016-05-09 17:36+0000\n"
-"Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
+"PO-Revision-Date: 2016-06-21 09:31+0000\n"
+"Last-Translator: francescbassas <francesc@babu.cat>\n"
 "Language-Team: Spanish (http://www.transifex.com/civicrm/civicrm/language/es/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -617,7 +617,7 @@ msgstr ""
 
 #: ang/crmCaseType/activityTypesTable.html
 msgid "Add activity type"
-msgstr ""
+msgstr "Añadir tipo de actividad"
 
 #: ang/crmCaseType/caseTypeDetails.html
 msgid "WARNING: The case type name includes deprecated characters."
