po: update po/ja_JP/admin.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/ja_JP/admin.po
+++ b/po/ja_JP/admin.po
@@ -15,8 +15,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-05-09 13:33-0400\n"
-"PO-Revision-Date: 2016-06-09 01:55+0000\n"
-"Last-Translator: kent_ocean <ke.tanabe@gmail.com>\n"
+"PO-Revision-Date: 2016-06-21 10:47+0000\n"
+"Last-Translator: Satomi Sato <puritira2015@gmail.com>\n"
 "Language-Team: Japanese (http://www.transifex.com/civicrm/civicrm/language/ja/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
