--- a/po/nb_NO/common-base.po
+++ b/po/nb_NO/common-base.po
@@ -12,13 +12,13 @@
 # Stein-Aksel Basma <basma@accelero.no>, 2011, 2012
 # Stein-Aksel Basma <stabasm@hotmail.com>, 2011-2013
 # Steinar Sødal <steinar@maf.no>, 2012
-# Steinar Sødal <steinar@maf.no>, 2013,2015
+# Steinar Sødal <steinar@maf.no>, 2013,2015-2016
 msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-05-09 13:33-0400\n"
-"PO-Revision-Date: 2016-06-09 08:28+0000\n"
-"Last-Translator: Lars Åge Kamfjord <lars-transifex@kamfjord.org>\n"
+"PO-Revision-Date: 2016-06-21 11:15+0000\n"
+"Last-Translator: Steinar Sødal <steinar@maf.no>\n"
 "Language-Team: Norwegian Bokmål (http://www.transifex.com/civicrm/civicrm/language/nb/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -18697,7 +18697,7 @@ msgstr "Totale avgifter"
 
 #: templates/CRM/Price/Form/Calculate.tpl
 msgid "for this participant"
-msgstr ""
+msgstr "for denne deltakeren"
 
 #: templates/CRM/Price/Form/DeleteField.tpl
 msgid ""
