--- a/po/nb_NO/common-components.po
+++ b/po/nb_NO/common-components.po
@@ -9,13 +9,13 @@
 # Piotr Szotkowski <chastell@chastell.net>, 2011
 # Stein-Aksel Basma <stabasm@hotmail.com>, 2012
 # Steinar Sødal <steinar@maf.no>, 2012
-# Steinar Sødal <steinar@maf.no>, 2013,2015
+# Steinar Sødal <steinar@maf.no>, 2013,2015-2016
 msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-05-09 13:33-0400\n"
-"PO-Revision-Date: 2016-05-22 11:51+0000\n"
-"Last-Translator: Lars Åge Kamfjord <lars-transifex@kamfjord.org>\n"
+"PO-Revision-Date: 2016-06-21 09:44+0000\n"
+"Last-Translator: Steinar Sødal <steinar@maf.no>\n"
 "Language-Team: Norwegian Bokmål (http://www.transifex.com/civicrm/civicrm/language/nb/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -1185,7 +1185,7 @@ msgstr "Trykk på 'Utsjekk med Google'-knappen for å fortsette."
 #: templates/CRM/Contribute/Form/Contribution/Main.tpl
 #: templates/CRM/Event/Form/Registration/Register.tpl
 msgid "Checkout with PayPal"
-msgstr "Utsjekk med PayPal"
+msgstr "Betal med PayPal"
 
 #: templates/CRM/Contribute/Form/Contribution/Main.tpl
 #: templates/CRM/Event/Form/Registration/Register.tpl
