--- a/po/nl_NL/report.po
+++ b/po/nl_NL/report.po
@@ -15,8 +15,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-05-09 13:33-0400\n"
-"PO-Revision-Date: 2016-06-15 14:13+0000\n"
-"Last-Translator: HanV <han.velthuis@home.nl>\n"
+"PO-Revision-Date: 2016-06-21 19:16+0000\n"
+"Last-Translator: Kevin Levie <kevin@levity.nl>\n"
 "Language-Team: Dutch (http://www.transifex.com/civicrm/civicrm/language/nl/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -2025,7 +2025,7 @@ msgstr "Er zijn geen %1-rapporten aangemaakt."
 msgid ""
 "You can create reports by selecting from the <a href=\"%1\">list of report "
 "templates here.</a>"
-msgstr "U kunt rapporten maken door hier een keuze te maken uit de <a href=\"%1\">lijst van rapportsjablonen</a>."
+msgstr "U kunt rapporten aanmaken door hier een keuze te maken uit de <a href=\"%1\">lijst van rapportsjablonen</a>."
 
 #: templates/CRM/Report/Page/InstanceList.tpl
 msgid "Contact your site administrator for help creating reports."
