po: update po/zh_CN/financial.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/zh_CN/financial.po
+++ b/po/zh_CN/financial.po
@@ -26,12 +26,13 @@
 # walkenaway <ashkandilothar@gmail.com>, 2015
 # zhiyong zhou <jxsky2002@163.com>, 2011
 # 兆锋 刘 <liuzf@jahome.net>, 2012
+# 陆西德 <hqcm2013@gmail.com>, 2016
 msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-05-09 13:33-0400\n"
-"PO-Revision-Date: 2016-05-09 17:11+0000\n"
-"Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
+"PO-Revision-Date: 2016-06-21 14:19+0000\n"
+"Last-Translator: 陆西德 <hqcm2013@gmail.com>\n"
 "Language-Team: Chinese (China) (http://www.transifex.com/civicrm/civicrm/language/zh_CN/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -41,23 +42,23 @@ msgstr ""
 
 #: CRM/Financial/BAO/ExportFormat.php
 msgid "Record:"
-msgstr ""
+msgstr "记录"
 
 #: CRM/Financial/BAO/ExportFormat.php
 msgid "Created By:"
-msgstr ""
+msgstr "创建者"
 
 #: CRM/Financial/BAO/ExportFormat.php
 msgid "Created Date:"
-msgstr ""
+msgstr "创建日期"
 
 #: CRM/Financial/BAO/ExportFormat.php
 msgid "Last Modified By:"
-msgstr ""
+msgstr "最后修订者"
 
 #: CRM/Financial/BAO/ExportFormat.php
 msgid "Payment Instrument:"
-msgstr ""
+msgstr "支付工具："
 
 #: CRM/Financial/BAO/ExportFormat.php
 msgid "Batch"
@@ -900,13 +901,13 @@ msgstr ""
 msgid ""
 "If you know in advance the number of transactions in this batch, you may "
 "specify it now."
-msgstr ""
+msgstr "如果你事先知道交易的这个批次的数量，你现在可以指定它。"
 
 #: templates/CRM/Financial/Page/FinancialBatch.hlp
 msgid ""
 "When you close your batch, CiviCRM will verify that you have entered the "
 "correct number"
-msgstr ""
+msgstr "当您关闭你的批次，CiviCRM将验证您输入了正确的数字"
 
 #: templates/CRM/Financial/Page/FinancialBatch.hlp
 msgid ""
@@ -942,11 +943,11 @@ msgstr ""
 
 #: templates/CRM/Financial/Page/FinancialTypeAccount.tpl
 msgid "Assign Account"
-msgstr ""
+msgstr "指定账户"
 
 #: templates/CRM/Financial/Page/FinancialTypeAccount.tpl
 msgid "Account Type (Code)"
-msgstr ""
+msgstr "账户类型(代码)"
 
 #: templates/CRM/Financial/Page/FinancialTypeAccount.tpl
 msgid "Owned By"
@@ -980,7 +981,7 @@ msgstr ""
 
 #: CRM/Financial/DAO/Currency.php
 msgid "Currency ID"
-msgstr ""
+msgstr "货币ID"
 
 #: CRM/Financial/DAO/Currency.php
 msgid "Currency Symbol"
@@ -1024,11 +1025,11 @@ msgstr ""
 
 #: CRM/Financial/DAO/FinancialItem.php
 msgid "Financial Item Status ID"
-msgstr ""
+msgstr "财务项目状态ID"
 
 #: CRM/Financial/DAO/FinancialTrxn.php
 msgid "Is Payment?"
-msgstr ""
+msgstr "支付吗？"
 
 #: CRM/Financial/DAO/PaymentProcessor.php
 #: CRM/Financial/DAO/PaymentProcessorType.php
@@ -1066,10 +1067,10 @@ msgstr ""
 msgid ""
 "If you specify a payment method then this batch will be limited to exporting"
 " only transactions paid with that method."
-msgstr ""
+msgstr "如果您指定付款方法，那么这一批将仅限于导出与该方法的支付交易。"
 
 #: templates/CRM/Financial/Page/FinancialBatch.hlp
 msgid ""
 "Note that not all transactions are necessarily associated with a payment "
 "method."
-msgstr ""
+msgstr "注意，并非所有的交易与付款方法必然相关联。"
