--- a/po/ca_ES/countries.po
+++ b/po/ca_ES/countries.po
@@ -6,13 +6,14 @@
 # francescbassas <francesc@babu.cat>, 2014
 # francescbassas <francesc@babu.cat>, 2013
 # francescbassas <francesc@babu.cat>, 2012
+# ixiam <info@ixiam.com>, 2016
 # Piotr Szotkowski <chastell@chastell.net>, 2011
 msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-05-08 17:05-0400\n"
-"PO-Revision-Date: 2016-05-08 22:32+0000\n"
-"Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
+"PO-Revision-Date: 2016-06-22 13:38+0000\n"
+"Last-Translator: ixiam <info@ixiam.com>\n"
 "Language-Team: Catalan (http://www.transifex.com/civicrm/civicrm/language/ca/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -1030,7 +1031,7 @@ msgstr "Curaçao"
 
 msgctxt "country"
 msgid "Sint Maarten (Dutch Part)"
-msgstr "Sint Maarten (Part holandesa)"
+msgstr "Illa de Sant Martí (part holandesa)"
 
 msgctxt "country"
 msgid "Bonaire, Saint Eustatius and Saba"
@@ -1042,8 +1043,8 @@ msgstr "Kosovo"
 
 msgctxt "country"
 msgid "Saint Barthélemy"
-msgstr ""
+msgstr "Sant Bartolomé"
 
 msgctxt "country"
 msgid "Saint Martin (French part)"
-msgstr ""
+msgstr "Illa de Sant Martí (part francesa)"
