po: update po/fr_FR/common-base.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/fr_FR/common-base.po
+++ b/po/fr_FR/common-base.po
@@ -43,7 +43,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-05-09 13:33-0400\n"
-"PO-Revision-Date: 2016-06-10 13:15+0000\n"
+"PO-Revision-Date: 2016-06-22 12:35+0000\n"
 "Last-Translator: Philippe SAMPONT <PhilippeS@cncd.be>\n"
 "Language-Team: French (http://www.transifex.com/civicrm/civicrm/language/fr/)\n"
 "MIME-Version: 1.0\n"
@@ -25074,7 +25074,7 @@ msgstr ""
 
 #: CRM/Contact/Task.php
 msgid "PDF letters - print"
-msgstr ""
+msgstr "Lettres PDF - imprimer"
 
 #: CRM/Contact/Task.php
 msgid "Email - unhold addresses"
@@ -26175,7 +26175,7 @@ msgstr ""
 
 #: templates/CRM/Contact/Form/Task/PDFLetterCommon.tpl
 msgid "Downloading..."
-msgstr ""
+msgstr "Téléchargement en cours..."
 
 #: templates/CRM/Contact/Page/DedupeFind.tpl
 msgid "Filter Contacts"
