--- a/po/ca_ES/provinces.po
+++ b/po/ca_ES/provinces.po
@@ -4,14 +4,15 @@
 # make sure you license it to CiviCRM LLC under Academic Free License 3.0.
 # Translators:
 # francescbassas <francesc@babu.cat>, 2012-2013
-# Marti <m.prat@ixiam.com>, 2013
+# ixiam <info@ixiam.com>, 2016
+# Marti Prat <m.prat@ixiam.com>, 2013
 # Piotr Szotkowski <chastell@chastell.net>, 2011
 msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-05-09 13:33-0400\n"
-"PO-Revision-Date: 2016-05-09 17:11+0000\n"
-"Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
+"PO-Revision-Date: 2016-06-22 16:22+0000\n"
+"Last-Translator: ixiam <info@ixiam.com>\n"
 "Language-Team: Catalan (http://www.transifex.com/civicrm/civicrm/language/ca/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -1881,7 +1882,7 @@ msgstr "Burgas"
 
 msgctxt "province"
 msgid "Dobrich"
-msgstr ""
+msgstr "Dobrich"
 
 msgctxt "province"
 msgid "Gabrovo"
@@ -1893,19 +1894,19 @@ msgstr "Haskovo"
 
 msgctxt "province"
 msgid "Yambol"
-msgstr ""
+msgstr "Yambol"
 
 msgctxt "province"
 msgid "Kardzhali"
-msgstr ""
+msgstr "Kardzhali"
 
 msgctxt "province"
 msgid "Kyustendil"
-msgstr ""
+msgstr "Kyustendil"
 
 msgctxt "province"
 msgid "Lovech"
-msgstr ""
+msgstr "Lovech"
 
 msgctxt "province"
 msgid "Pazardzik"
@@ -1941,7 +1942,7 @@ msgstr "Sliven"
 
 msgctxt "province"
 msgid "Smolyan"
-msgstr ""
+msgstr "Smolyan"
 
 msgctxt "province"
 msgid "Sofia"
@@ -1953,11 +1954,11 @@ msgstr "Stara Zagora"
 
 msgctxt "province"
 msgid "Shumen"
-msgstr ""
+msgstr "Shumen"
 
 msgctxt "province"
 msgid "Targovishte"
-msgstr ""
+msgstr "Targovishte"
 
 msgctxt "province"
 msgid "Varna"
@@ -1973,7 +1974,7 @@ msgstr "Vidin"
 
 msgctxt "province"
 msgid "Vratsa"
-msgstr ""
+msgstr "Vratsa"
 
 msgctxt "province"
 msgid "Al Hadd"
@@ -2837,7 +2838,7 @@ msgstr "Maule"
 
 msgctxt "province"
 msgid "Santiago Metropolitan"
-msgstr ""
+msgstr "Regió metropolitana de Santiago"
 
 msgctxt "province"
 msgid "Tarapaca"
@@ -5529,11 +5530,11 @@ msgstr "Agio Oros"
 
 msgctxt "province"
 msgid "Alta Verapaz"
-msgstr ""
+msgstr "Alta Verapaz"
 
 msgctxt "province"
 msgid "Baja Verapaz"
-msgstr ""
+msgstr "Baja Verapaz"
 
 msgctxt "province"
 msgid "Chimaltenango"
@@ -5585,7 +5586,7 @@ msgstr "Quiche"
 
 msgctxt "province"
 msgid "Retalhuleu"
-msgstr ""
+msgstr "Retalhuleu"
 
 msgctxt "province"
 msgid "Sacatepequez"
@@ -5601,7 +5602,7 @@ msgstr "Santa Rosa"
 
 msgctxt "province"
 msgid "Sololá"
-msgstr ""
+msgstr "Sololá"
 
 msgctxt "province"
 msgid "Suchitepequez"
@@ -6033,7 +6034,7 @@ msgstr "Bali"
 
 msgctxt "province"
 msgid "Kepulauan Bangka Belitung"
-msgstr ""
+msgstr "Bangka-Belitung"
 
 msgctxt "province"
 msgid "Banten"
@@ -6049,7 +6050,7 @@ msgstr "Gorontalo"
 
 msgctxt "province"
 msgid "Papua Barat"
-msgstr ""
+msgstr "Papua Occidental"
 
 msgctxt "province"
 msgid "Jambi"
