--- a/po/fr_FR/event.po
+++ b/po/fr_FR/event.po
@@ -12,6 +12,7 @@
 # Paul Caranton <caranton.paul@gmail.com>, 2015
 # Peter <webmaster@lebouclier.com>, 2016
 # Philippe Bégou <philippe.begou@gmail.com>, 2012-2013
+# Philippe SAMPONT <PhilippeS@cncd.be>, 2016
 # Piotr Szotkowski <chastell@chastell.net>, 2011
 # reda <redasadki@gmail.com>, 2011
 # tonthon <tonthon21@gmail.com>, 2011, 2012
@@ -19,8 +20,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-05-09 13:33-0400\n"
-"PO-Revision-Date: 2016-05-09 17:11+0000\n"
-"Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
+"PO-Revision-Date: 2016-06-22 12:34+0000\n"
+"Last-Translator: Philippe SAMPONT <PhilippeS@cncd.be>\n"
 "Language-Team: French (http://www.transifex.com/civicrm/civicrm/language/fr/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -3788,27 +3789,27 @@ msgstr ""
 
 #: CRM/Event/Task.php
 msgid "Delete participants from event"
-msgstr ""
+msgstr "Supprimer les participants de cet événement"
 
 #: CRM/Event/Task.php
 msgid "Export participants"
-msgstr ""
+msgstr "Exporter les participants"
 
 #: CRM/Event/Task.php
 msgid "Cancel registration"
-msgstr ""
+msgstr "Annuler l'inscription"
 
 #: CRM/Event/Task.php
 msgid "Participant status - change (emails sent)"
-msgstr ""
+msgstr "Changer le statut des participants (et envoi de courriels)"
 
 #: CRM/Event/Task.php
 msgid "Name badges - print"
-msgstr ""
+msgstr "Badges nominatifs - impression"
 
 #: CRM/Event/Task.php
 msgid "PDF letter - print for participants"
-msgstr ""
+msgstr "Lettre PDF - Imprimer pour les participants"
 
 #: CRM/Event/Tokens.php
 msgid "Event Contact (Email)"
