po: update po/es_ES/campaign.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/es_ES/campaign.po
+++ b/po/es_ES/campaign.po
@@ -24,7 +24,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-05-09 13:33-0400\n"
-"PO-Revision-Date: 2016-06-17 16:33+0000\n"
+"PO-Revision-Date: 2016-06-23 10:40+0000\n"
 "Last-Translator: ixiam <info@ixiam.com>\n"
 "Language-Team: Spanish (http://www.transifex.com/civicrm/civicrm/language/es/)\n"
 "MIME-Version: 1.0\n"
@@ -767,13 +767,13 @@ msgstr "Ya ha firmado esta petición previamente."
 msgid ""
 "You have already signed this petition but you still <b>need to verify your "
 "email address</b>."
-msgstr ""
+msgstr "Ya has firmado esta petición, pero todavía <b>necesitas verificar tu dirección de correo electrónico</b>."
 
 #: templates/CRM/Campaign/Form/Petition/Signature.tpl
 msgid ""
 "Please check your email inbox for the confirmation email. If you don't find "
 "it, verify if it isn't in your spam folder."
-msgstr ""
+msgstr "Por favor, comprueba la recepción del correo electrónico de confirmación en tu bandeja de entrada. Si no lo encuentras, verifica la carpeta de correo no deseado."
 
 #: templates/CRM/Campaign/Form/Petition.tpl
 msgid "Are you sure you want to delete this Petition?"
@@ -1034,7 +1034,7 @@ msgid ""
 "related to a particular fund-raising or engagement effort. You can link "
 "activities, contributions, event participation, mailings, membership "
 "signups, and pledges to a particular campaign."
-msgstr ""
+msgstr "En tu organización puedes utilizar las Campañas para realizar el seguimiento de las interacciones de tus contactos relacionadas con un compromiso o recaudación de fondos particular. Puedes vincular actividades, contribuciones, registros a eventos, envíos de correo electrónico, nuevos miembros y compromisos a una campaña en particular."
 
 #: templates/CRM/Campaign/Form/addCampaignToComponent.tpl
 msgid "Show past campaign(s) in this select list."
