po: update po/en_GB/provinces.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/en_GB/provinces.po
+++ b/po/en_GB/provinces.po
@@ -11,7 +11,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-05-09 13:33-0400\n"
-"PO-Revision-Date: 2016-06-16 09:21+0000\n"
+"PO-Revision-Date: 2016-06-23 14:19+0000\n"
 "Last-Translator: Andi Chandler <andi@gowling.com>\n"
 "Language-Team: English (United Kingdom) (http://www.transifex.com/civicrm/civicrm/language/en_GB/)\n"
 "MIME-Version: 1.0\n"
@@ -7914,11 +7914,11 @@ msgstr "Jūrmala"
 
 msgctxt "province"
 msgid "Liepāja"
-msgstr ""
+msgstr "Liepāja"
 
 msgctxt "province"
 msgid "Rēzekne"
-msgstr ""
+msgstr "Rēzekne"
 
 msgctxt "province"
 msgid "Rīga"
@@ -11430,7 +11430,7 @@ msgstr "Jezersko"
 
 msgctxt "province"
 msgid "Juršinci"
-msgstr ""
+msgstr "Juršinci"
 
 msgctxt "province"
 msgid "Kamnik"
@@ -11442,7 +11442,7 @@ msgstr "Kanal"
 
 msgctxt "province"
 msgid "Kidričevo"
-msgstr ""
+msgstr "Kidričevo"
 
 msgctxt "province"
 msgid "Kobarid"
@@ -11454,7 +11454,7 @@ msgstr "Kobilje"
 
 msgctxt "province"
 msgid "Kočevje"
-msgstr ""
+msgstr "Kočevje"
 
 msgctxt "province"
 msgid "Komen"
@@ -11486,11 +11486,11 @@ msgstr "Kranjska Gora"
 
 msgctxt "province"
 msgid "Križevci"
-msgstr ""
+msgstr "Križevci"
 
 msgctxt "province"
 msgid "Krško"
-msgstr ""
+msgstr "Krško"
 
 msgctxt "province"
 msgid "Kungota"
@@ -11502,7 +11502,7 @@ msgstr "Kuzma"
 
 msgctxt "province"
 msgid "Laško"
-msgstr ""
+msgstr "Laško"
 
 msgctxt "province"
 msgid "Lenart"
@@ -11534,11 +11534,11 @@ msgstr "Logatec"
 
 msgctxt "province"
 msgid "Loška dolina"
-msgstr ""
+msgstr "Loška dolina"
 
 msgctxt "province"
 msgid "Loški Potok"
-msgstr ""
+msgstr "Loški Potok"
 
 msgctxt "province"
 msgid "Lovrenc na Pohorju"
