--- a/po/es_ES/pledge.po
+++ b/po/es_ES/pledge.po
@@ -16,7 +16,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-05-09 13:33-0400\n"
-"PO-Revision-Date: 2016-06-16 11:50+0000\n"
+"PO-Revision-Date: 2016-06-23 10:03+0000\n"
 "Last-Translator: ixiam <info@ixiam.com>\n"
 "Language-Team: Spanish (http://www.transifex.com/civicrm/civicrm/language/es/)\n"
 "MIME-Version: 1.0\n"
@@ -814,7 +814,7 @@ msgstr "Por favor, introducir número."
 
 #: CRM/Pledge/DAO/PledgeBlock.php
 msgid "Pledge Block ID"
-msgstr ""
+msgstr "Identificador del bloque del compromiso"
 
 #: CRM/Pledge/DAO/PledgeBlock.php
 msgid "Expose Frequency Interval?"
