--- a/po/es_ES/member.po
+++ b/po/es_ES/member.po
@@ -13,7 +13,7 @@
 # ixiam <info@ixiam.com>, 2013
 # Jon Altuna <jonaltuna@msn.com>, 2015
 # Maria Dolores Vallenilla <mvallenilla@ndi.org>, 2015
-# Marti <m.prat@ixiam.com>, 2014
+# Marti Prat <m.prat@ixiam.com>, 2014
 # Piotr Szotkowski <chastell@chastell.net>, 2011
 # sluc23 <sluc23@hotmail.com>, 2011
 # sluc23 <sluc23@hotmail.com>, 2011
@@ -21,8 +21,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-05-09 13:33-0400\n"
-"PO-Revision-Date: 2016-05-09 17:10+0000\n"
-"Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
+"PO-Revision-Date: 2016-06-23 11:09+0000\n"
+"Last-Translator: ixiam <info@ixiam.com>\n"
 "Language-Team: Spanish (http://www.transifex.com/civicrm/civicrm/language/es/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -935,7 +935,7 @@ msgid ""
 "before you can use Batch Update via Profile. Navigate to Administer CiviCRM "
 ">> CiviCRM Profile to configure a Profile. Consult the online Administrator "
 "documentation for more information."
-msgstr ""
+msgstr "Se necesita crear un perfil que contenga los %1 campos que desees editar antes de utilizar la funcionalidad de actualización en lote mediante perfil. Vaya a Administrar >> Pantallas y campos personalizados >> Perfiles para configurar un perfil. Consultar la guía de Administración para más información."
 
 #: CRM/Member/Form/Task/Print.php
 msgid "Print Members"
@@ -1242,7 +1242,7 @@ msgstr "¿Enviar automáticamente confirmación de membresía y recibo a %1 ?"
 msgid ""
 "OR if the payment is from a different contact, this email will only go to "
 "them."
-msgstr ""
+msgstr "O si el pago procede de un contacto diferente, este correo electrónico sólo irá a ellos."
 
 #: templates/CRM/Member/Form/Membership.tpl
 msgid "Automatically email a membership confirmation and receipt to "
@@ -2303,15 +2303,15 @@ msgstr "Esta membresía será renovada automáticamente. Usted puede cancelar la
 
 #: CRM/Member/BAO/Query.php
 msgid "Membership Status Is Overriden"
-msgstr ""
+msgstr "El estado del miembro está sobreescrito"
 
 #: CRM/Member/BAO/Query.php
 msgid "Membership Status Is NOT Overriden"
-msgstr ""
+msgstr "El estado del miembro NO está sobreescrito"
 
 #: CRM/Member/BAO/Query.php
 msgid "Membership Status Is Overriden?"
-msgstr ""
+msgstr "¿Está sobreescrito el estado del miembro?"
 
 #: CRM/Member/DAO/Membership.php
 msgid "Membership Recurring Contribution"
@@ -2319,7 +2319,7 @@ msgstr ""
 
 #: CRM/Member/DAO/MembershipLog.php
 msgid "Membership Log ID"
-msgstr ""
+msgstr "Identificador del Log del miembro"
 
 #: CRM/Member/DAO/MembershipLog.php
 msgid "Membership Log Start Date"
@@ -2335,11 +2335,11 @@ msgstr ""
 
 #: CRM/Member/DAO/MembershipLog.php
 msgid "Maximum Related Memberships"
-msgstr ""
+msgstr "Máximo de miembros relacionados"
 
 #: CRM/Member/Form/Membership.php
 msgid "Record Membership Payment is required when you use a price set."
-msgstr ""
+msgstr "Es necesario grabar un pago de miembro cuando se utiliza una tarifa de precios."
 
 #: CRM/Member/Form/Membership.php
 msgid ""
